crates/swc_ecma_parser/tests/errors/jsx_in_js/input.js
const a = (
  <section>
    <a href="/foo">foo</a>
  </section>
);
